--- a/app/src/main/res/layout/activity_adash.xml
+++ b/app/src/main/res/layout/activity_adash.xml
@@ -33,6 +33,11 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/sp_acourseid"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
