--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="20sp"
+            android:id="@+id/tv_answered_count_label"
             android:text="Answered:"/>
 
         <TextView
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="20sp"
+            android:id="@+id/tv_skipped_count_label"
             android:text="Skipped:"/>
 
         <TextView
@@ -54,6 +56,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="20sp"
+            android:id="@+id/tv_bookmarked_count_label"
             android:text="Bookmarked:"/>
 
         <TextView
@@ -74,6 +77,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="20sp"
+            android:id="@+id/tv_not_attempted_count_label"
             android:text="Yet To Answer:"/>
 
         <TextView
