--- a/app/src/main/res/layout/activity_paperdashitem.xml
+++ b/app/src/main/res/layout/activity_paperdashitem.xml
@@ -3,14 +3,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp">
+    android:layout_margin="3dp">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
-        android:layout_margin="1dp"
+        android:layout_margin="3dp"
         android:layout_gravity="center"
         card:cardCornerRadius="5dp"
         card:cardElevation="5dp"
@@ -19,77 +19,286 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_weight="1.5"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/fpdash_papername"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="#000000"
-                    android:textSize="14dp"/>
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/fpdash_tottestcount"
+                    <TextView
+                        android:id="@+id/fpdash_papername"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:layout_weight="1"
+                        android:textColor="#000000"
+                        android:textSize="16dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Total Tests"
+                            android:layout_weight="1"
+                            android:textColor="#8e58d1"
+                            android:textSize="14dp"/>
+
+                        <TextView
+                            android:id="@+id/fpdash_tottestcount"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="#000000"
+                            android:textSize="14dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Attempted"
+                            android:layout_weight="1"
+                            android:textColor="#8e58d1"
+                            android:textSize="14dp"/>
+
+                        <TextView
+                            android:id="@+id/fpdash_attemptcount"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="#000000"
+                            android:textSize="14dp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="#000000"
-                    android:textSize="14dp"/>
+                    android:weightSum="5"
+                    android:layout_margin="2dp"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/fpdash_attemptcount"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.4">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/btn_details_bg"
+                            android:text="Self"
+                            android:padding="3dp"
+                            android:textStyle="italic"
+                            android:textSize="12sp"
+                            android:textColor="#FFFFFF"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1.2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Min"
+                            android:layout_weight="1"
+                            android:textColor="#8e58d1"
+                            android:textSize="14dp"/>
+
+                        <TextView
+                            android:id="@+id/fpdash_min"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="#000000"
+                            android:textSize="14dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1.2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Max"
+                            android:layout_weight="1"
+                            android:textColor="#8e58d1"
+                            android:textSize="14dp"/>
+
+                        <TextView
+                            android:id="@+id/fpdash_max"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="#000000"
+                            android:textSize="14dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1.2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Avg"
+                            android:layout_weight="1"
+                            android:textColor="#8e58d1"
+                            android:textSize="14dp"/>
+
+                        <TextView
+                            android:id="@+id/fpdash_avg"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="#000000"
+                            android:textSize="14dp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="#000000"
-                    android:textSize="14dp"/>
+                    android:weightSum="5"
+                    android:layout_margin="2dp"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.4">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/btn_details_bg"
+                            android:text="Batch"
+                            android:padding="3dp"
+                            android:textStyle="italic"
+                            android:textSize="12sp"
+                            android:textColor="#FFFFFF"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1.2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Min"
+                            android:layout_weight="1"
+                            android:textColor="#8e58d1"
+                            android:textSize="14dp"/>
+
+                        <TextView
+                            android:id="@+id/fpdash_bmin"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="#000000"
+                            android:textSize="14dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1.2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Max"
+                            android:layout_weight="1"
+                            android:textColor="#8e58d1"
+                            android:textSize="14dp"/>
+
+                        <TextView
+                            android:id="@+id/fpdash_bmax"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="#000000"
+                            android:textSize="14dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1.2">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Avg"
+                            android:layout_weight="1"
+                            android:textColor="#8e58d1"
+                            android:textSize="14dp"/>
+
+                        <TextView
+                            android:id="@+id/fpdash_bavg"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="#000000"
+                            android:textSize="14dp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/fpdash_max"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="#000000"
-                    android:textSize="14dp"/>
-
-                <TextView
-                    android:id="@+id/fpdash_min"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="#000000"
-                    android:textSize="14dp"/>
-
-                <TextView
-                    android:id="@+id/fpdash_avg"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="#000000"
-                    android:textSize="14dp"/>
+                android:layout_weight="8.5">
 
                 <Button
                     android:id="@+id/fpdash_det"
-                    android:layout_width="match_parent"
+                    android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/btn_details_bg"
-                    android:layout_weight="1"
-                    android:textSize="12sp"
-                    android:textColor="@color/white"
-                    android:text="Details"/>
+                    android:background="@drawable/details"/>
 
             </LinearLayout>
 
